Transformation de l'echequier en jeu de dames

--- a/css.css
+++ b/css.css
@@ -9,15 +9,12 @@ td, tr{
 	width: 36px;
 	border-collapse: collapse;
 }
-
-.black {
-	background-color: grey;
+.beige{
+    background-color: beige;
 }
-
-.white {
-	background-color: white;
+.marron{
+    background-color: burlywood;
 }
-
 .rouge {
 	background-color: red;
 }
